# fantastic-fiesta

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  clean_up.bat
.gemini/: config.json
docs/001-imgui-project-plan/: design.md  execution.md  imgui_project_plan.md  requirements.md  tasks.md  validation.md
docs/002-imgui-cmake-glad/: design.md  execution.md  imgui_external_setup_plan.md  requirements.md  tasks.md  validation.md
docs/003-imgui-external-validation/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/004-cmake-project/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/005-build-script/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/006-screenshot/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/007-screenshot-dpi-fix/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/008-gemini-skill-guide/: design.md  execution.md  gemini-skill-addition-guide.md  requirements.md  tasks.md  validation.md
docs/009-skill-template/: design.md  execution.md  gemini-skill-template.md  requirements.md  tasks.md  validation.md
docs/010-skill-manager/: design.md  execution.md  requirements.md  tasks.md  validation.md  walkthrough.md
docs/011-tab-dialog/: design.md  execution.md  requirements.md  tasks.md  validation.md
docs/012-opencv-integration/: design.md  (+4 more)
scripts/: build_all_configs.ps1  take_screenshots.ps1
src/: BaseDialog.h  IntegrationDialog.cpp  IntegrationDialog.h  SubDialog1.h  SubDialog2.h  SubDialogOpenCV.h  main.cpp
(+11 files in other folders)
